typescript/checker/tests/conformance/parser/ecmascript5/Types/parserTypeQuery1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            31,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Types/parserTypeQuery1.ts:1:15
  |
1 | var v: typeof A
  |               ^

